[project]
name = "schema-registry-utils"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "linkml>=1.11.1",
    "linkml-runtime>=1.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/schema_registry_utils"]
